--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -1,200 +1,122 @@
-name: 'V2V Publisher - Fixed & Timeout Protected'
+Name: 'V2V Unified Deployment Pipeline'
 
 on:
-  # اجرا هر 4 ساعت یکبار (کمتر فشار به سرور)
   schedule:
     - cron: '0 */4 * * *' 
   workflow_dispatch:
+  push:
+    branches: [ main, master ]
+    paths: 
+      - 'scraper.py'
+      - 'sources.json'
+      - 'requirements.txt'
+      - 'worker.js'
+      - 'package.json'
+      - 'index.html'
+      - 'index.js'
+      - 'manifest.json'
+      - '.github/workflows/**'
+
+permissions:
+  contents: write 
+  pages: write    
+  id-token: write 
   
-# ✅ اضافه کردن timeout کلی برای workflow
 env:
-  WORKFLOW_TIMEOUT_MINUTES: 50
+  PYTHON_VERSION: '3.11'
+  SCRAPER_TIMEOUT_SECONDS: 2700 # 45 minutes
 
 jobs:
   scrape_and_commit:
     runs-on: ubuntu-latest
     environment: Production
-    # ✅ تنظیم timeout برای کل job
-    timeout-minutes: 45
+    timeout-minutes: 50
     
+    outputs:
+      configs_updated: ${{ steps.commit_check.outputs.configs_updated }}
+      
     steps:
-    - name: Checkout code
+    - name: Checkout Repository
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        # ✅ اضافه کردن timeout برای checkout
-        timeout-minutes: 5
 
-    - name: Setup Python environment
+    - name: Setup Python Environment
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
-      timeout-minutes: 5
+        python-version: ${{ env.PYTHON_VERSION }}
+        cache: 'pip'
 
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests PyGithub PyYAML
-      timeout-minutes: 5
+        pip install -r requirements.txt
+        pip install awscli
 
-    # ✅ بررسی sources.json قبل از اجرا
-    - name: Validate sources file
+    - name: Execute Scraper with Fallback
+      id: scraper_run
+      timeout-minutes: 45
       run: |
-        if [ ! -f "sources.json" ]; then
-          echo "ERROR: sources.json not found!"
-          echo '{"static": ["https://example.com/sub1", "https://example.com/sub2"]}' > sources.json
-        fi
+        if [ ! -f "sources.json" ]; then exit 1; fi
         python -c "import json; json.load(open('sources.json'))" || exit 1
-        echo "✅ sources.json is valid"
-      timeout-minutes: 2
-
-    # ✅ اجرای اسکریپت با timeout و error handling
-    - name: Execute Scraper script
-      run: |
-        echo "🚀 Starting scraper with timeout protection..."
-        timeout 2400 python scraper.py || {
+        
+        timeout ${{ env.SCRAPER_TIMEOUT_SECONDS }} python scraper.py || {
           exit_code=$?
           if [ $exit_code -eq 124 ]; then
-            echo "⏰ Scraper timed out after 40 minutes"
-            echo "Creating minimal output files to prevent workflow failure..."
-            
-            # ایجاد فایل‌های minimal در صورت timeout
-            echo '{"xray": {"vless": [], "vmess": [], "trojan": [], "ss": []}, "singbox": {"vless": [], "vmess": [], "trojan": [], "ss": [], "hy2": [], "tuic": []}}' > all_live_configs.json
+            echo '{"xray": {}, "singbox": {}}' > all_live_configs.json
             echo 'proxies: []' > clash_subscription.yml
-            echo $(date +%s) > cache_version.txt
-            
-            echo "⚠️ Minimal files created due to timeout"
-          else
-            echo "❌ Scraper failed with exit code: $exit_code"
+            date +%s > cache_version.txt
+          elif [ $exit_code -ne 0 ]; then
             exit 1
           fi
         }
         
-        # بررسی وجود فایل‌های خروجی
-        if [ ! -f "all_live_configs.json" ] || [ ! -f "clash_subscription.yml" ] || [ ! -f "cache_version.txt" ]; then
-          echo "❌ Required output files missing!"
-          exit 1
-        fi
-        
-        echo "✅ Scraper completed successfully"
-      env:
-        GH_PAT: ${{ secrets.GH_PAT }}
-        # ✅ محدود کردن GitHub search برای جلوگیری از timeout
-        GITHUB_SEARCH_LIMIT: 30
-      timeout-minutes: 42
-
-    - name: Configure Git for commit
+    - name: Check, Commit, and Push Changes
+      id: commit_check
       run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-      timeout-minutes: 2
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
         
-    # ✅ بهبود commit process
-    - name: Commit and Push new files (GitHub Mirror)
-      run: |
-        echo "📝 Checking for changes..."
+        git add .
         
-        # بررسی اندازه فایل‌های تولید شده
-        if [ -f "all_live_configs.json" ]; then
-          config_size=$(wc -c < "all_live_configs.json")
-          echo "📊 Config file size: $config_size bytes"
-          
-          if [ "$config_size" -lt 100 ]; then
-            echo "⚠️ Config file too small, may indicate error"
-          fi
-        fi
-        
-        # اضافه کردن فایل‌ها
-        git add all_live_configs.json clash_subscription.yml cache_version.txt
-        
-        # بررسی تغییرات
-        if git diff --cached --exit-code; then
-          echo "ℹ️ No changes detected. Skipping commit."
+        if git diff --cached --exit-code > /dev/null 2>&1; then
+          echo "configs_updated=false" >> $GITHUB_OUTPUT
         else
-          echo "✅ Changes detected. Committing..."
-          
-          # محاسبه تعداد configs
+          echo "configs_updated=true" >> $GITHUB_OUTPUT
           xray_count=$(python3 -c "import json; data=json.load(open('all_live_configs.json')); print(sum(len(v) for v in data.get('xray', {}).values()))" 2>/dev/null || echo "0")
           singbox_count=$(python3 -c "import json; data=json.load(open('all_live_configs.json')); print(sum(len(v) for v in data.get('singbox', {}).values()))" 2>/dev/null || echo "0")
           
-          commit_msg="🤖 V2V Auto-Update: Xray($xray_count) + Sing-box($singbox_count) configs [$(date -u '+%Y-%m-%d %H:%M UTC')]"
-          
+          commit_msg="🤖 V2V Update: Xray(${xray_count}) + Sing-box(${singbox_count}) configs"
           git commit -m "$commit_msg"
           git push
-          
-          echo "✅ Files committed and pushed successfully"
         fi
-      timeout-minutes: 5
-        
-  multi_mirror_deploy:
-    runs-on: ubuntu-latest
+
+  deploy_mirrors:
     needs: scrape_and_commit
-    # ✅ اجرا حتی در صورت partial failure job قبلی
-    if: always() && (needs.scrape_and_commit.result == 'success' || needs.scrape_and_commit.result == 'failure')
+    runs-on: ubuntu-latest
+    if: always()
     timeout-minutes: 15
     
     steps:
-    - name: Checkout code (Fetch committed files)
+    - name: Checkout Latest Committed Files
       uses: actions/checkout@v4
       with:
-        # ✅ اطمینان از دریافت آخرین commit
         ref: ${{ github.ref }}
-      timeout-minutes: 3
 
-    # ✅ بررسی وجود فایل‌های لازم قبل از deploy
-    - name: Validate output files
-      run: |
-        echo "🔍 Validating output files..."
-        
-        required_files=("all_live_configs.json" "clash_subscription.yml" "cache_version.txt")
-        
-        for file in "${required_files[@]}"; do
-          if [ ! -f "$file" ]; then
-            echo "❌ Missing file: $file"
-            echo "Creating placeholder..."
-            case $file in
-              "all_live_configs.json")
-                echo '{"xray": {}, "singbox": {}}' > "$file"
-                ;;
-              "clash_subscription.yml")
-                echo 'proxies: []' > "$file"
-                ;;
-              "cache_version.txt")
-                echo $(date +%s) > "$file"
-                ;;
-            esac
-          else
-            echo "✅ Found: $file ($(wc -c < "$file") bytes)"
-          fi
-        done
-        
-        # بررسی validity فایل JSON
-        python3 -c "import json; json.load(open('all_live_configs.json'))" || {
-          echo "⚠️ Invalid JSON detected. Creating valid placeholder."
-          echo '{"xray": {}, "singbox": {}}' > all_live_configs.json
-        }
-        
-        echo "✅ All files validated"
-      timeout-minutes: 2
-
-    # Deploy to Vercel Mirror
     - name: Deploy to Vercel Mirror
-      id: vercel_deploy
-      uses: amondnet/vercel-action@v25 
+      uses: amondnet/vercel-action@v25
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
         vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
         vercel-args: '--prod'
       continue-on-error: true
-      timeout-minutes: 8
 
-    # Deploy to Arvan Cloud Object Storage
-    - name: Deploy to Arvan Cloud Object Storage (S3 Sync)
-      id: arvan_deploy
+    - name: Deploy to Arvan Cloud Object Storage (S3)
       uses: jakejarvis/s3-sync-action@master
       with:
-        args: --acl public-read --delete --exclude ".git/*" --exclude ".github/*" --exclude "*.py" --exclude "README.md"
+        # ⚠️ این پارامتر را حذف کردیم تا مطمئن شویم فایل‌های HTML/JS/manifest آپلود می‌شوند.
+        args: --acl public-read --delete
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY }} 
         AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
@@ -202,73 +124,46 @@ jobs:
         AWS_S3_BUCKET: ${{ secrets.ARVAN_BUCKET_NAME }} 
         SOURCE_DIR: '.'
       continue-on-error: true
-      timeout-minutes: 5
+
+  deploy_pages_and_worker:
+    needs: [scrape_and_commit, deploy_mirrors]
+    runs-on: ubuntu-latest
+    if: always()
+    timeout-minutes: 10
+    
+    steps:
+    - name: Checkout Code for Deployment
+      uses: actions/checkout@v4
       
-    # Final Deploy Status Report with better formatting
-    - name: Final Deploy Status Report
-      if: always() 
+    - name: Deploy Cloudflare Worker (v2v)
+      if: secrets.CLOUDFLARE_API_TOKEN != '' # Check for token existence
+      uses: cloudflare/wrangler-action@v3
+      with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          # 💡 استفاده از wrangle.toml برای تنظیمات، به جای secrets.V2V_KV
+          command: deploy
+      continue-on-error: true
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+
+    - name: Upload Artifacts for Pages
+      uses: actions/upload-pages-artifact@v3
+      with:
+        # 💡 مطمئن می‌شویم که ریشه مخزن آپلود می‌شود
+        path: '.'
+
+    - name: Final Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
+
+    - name: Final Status Summary
+      if: always()
       run: |
-        echo "============================================"
-        echo "🚀 DEPLOYMENT STATUS REPORT"
-        echo "============================================"
-        
-        vercel_status="${{ steps.vercel_deploy.outcome }}"
-        arvan_status="${{ steps.arvan_deploy.outcome }}"
-        scraper_status="${{ needs.scrape_and_commit.result }}"
-        
-        echo "📊 Job Results:"
-        echo "   - Scraper: $scraper_status"
-        echo "   - Vercel: $vercel_status"
-        echo "   - Arvan: $arvan_status"
-        echo ""
-        
-        # محاسبه تعداد configs
-        if [ -f "all_live_configs.json" ]; then
-          total_configs=$(python3 -c "
-          import json
-          try:
-              data = json.load(open('all_live_configs.json'))
-              xray_total = sum(len(v) for v in data.get('xray', {}).values())
-              singbox_total = sum(len(v) for v in data.get('singbox', {}).values())
-              print(f'Xray: {xray_total}, Sing-box: {singbox_total}, Total: {xray_total + singbox_total}')
-          except:
-              print('Error reading config file')
-          " 2>/dev/null || echo "Could not calculate totals")
-          echo "📈 Configs: $total_configs"
-        fi
-        
-        echo ""
-        echo "🌐 Mirror Status:"
-        echo "   - GitHub Pages: ✅ Active (Primary)"
-        
-        if [ "$vercel_status" = "success" ]; then
-          echo "   - Vercel: ✅ Deployed"
-        else
-          echo "   - Vercel: ❌ Failed"
-        fi
-        
-        if [ "$arvan_status" = "success" ]; then
-          echo "   - Arvan Cloud: ✅ Deployed"
-        else
-          echo "   - Arvan Cloud: ❌ Failed"
-        fi
-        
-        echo ""
-        
-        # تعیین وضعیت نهایی
-        if [ "$vercel_status" = "failure" ] && [ "$arvan_status" = "failure" ]; then
-          echo "⚠️ WARNING: All secondary mirrors failed!"
-          echo "🔄 Only GitHub Pages mirror is active."
-          echo "🔧 Check secrets and service availability."
-        elif [ "$vercel_status" = "failure" ] || [ "$arvan_status" = "failure" ]; then
-          echo "⚠️ PARTIAL: One mirror failed, others operational."
-          echo "✅ Service continuity maintained."
-        else
-          echo "✅ SUCCESS: All mirrors updated successfully!"
-          echo "🎯 Full redundancy achieved."
-        fi
-        
-        echo "============================================"
-        echo "⏰ Completed at: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
-        echo "============================================"
-      timeout-minutes: 2
+        echo "=========================================="
+        echo "✅ V2V Pipeline Completed"
+        echo "=========================================="
+        echo "Configs Updated: ${{ needs.scrape_and_commit.outputs.configs_updated }}"
+        echo "Pages URL: ${{ steps.deployment.outputs.page_url }}"
+        echo "Cloudflare Worker: Deployed"
+        echo "=========================================="
